--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <script src="main.js"></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div id="calculator">
+      
+  </div>  
 </body>
 </html>
