added calculator screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div id="calculator">
-      
+      <div class="screen"></div>
   </div>  
 </body>
 </html>
