--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
   <div class="container">
     <div id="calculator">
       <div class="screen"></div>
+      <div class="buttons">
+        <button class="clear">C</button>
+        <button class="root operator">√</button>
+        <button class="invert operator">±</button>
+        <button class="multiply operator">*</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="divide operator">/</button>
+        <button class="number">6</button>
+        <button class="number">5</button>
+        <button class="number">4</button>
+        <button class="subtract operator">-</button>
+        <button class="number">3</button>
+        <button class="number">2</button>
+        <button class="number">1</button>
+        <button class="add operator">+</button>
+        <button class="zero number">0</button>
+        <button class="number decimal">.</button>
+        <button class="equal operator">=</button>
+      </div>
+    </div>
   </div>  
 </body>
 </html>
