added additonal elements inside screen to give screen a better look

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
   <div class="container">
     <div id="calculator">
-      <div class="screen"></div>
+      <div class="screen">
+        <p class="staged-calculation"></p>
+        <h1 class="current-number"></h1>
+      </div>
       <div class="buttons">
         <button class="clear">C</button>
         <button class="root operator">√</button>
