removed number class from decimal button, and gave decimal button number styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="number">1</button>
         <button class="add operator">+</button>
         <button class="zero number">0</button>
-        <button class="number decimal">.</button>
+        <button class="decimal">.</button>
         <button class="equal operator">=</button>
       </div>
     </div>
