--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button class="add operator">+</button>
         <button class="zero number">0</button>
         <button class="decimal">.</button>
-        <button class="equal operator">=</button>
+        <button class="equal">=</button>
       </div>
     </div>
   </div>  
